<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <!-- Cambiado a ImageView -->
    <ImageView
        android:id="@+id/imagen"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/desarroladores" />

    <TextView
        android:text="@string/Desarrolladortxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>

    <TextView
        android:text="@string/Emailtxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>

    <TextView
        android:text="@string/Versiontxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>


    <Button
        android:id="@+id/BtnEntendido"
        android:text="@string/BtnEntendido"
        android:layout_marginTop="10dp"
        android:layout_width="180dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"/>

</androidx.appcompat.widget.LinearLayoutCompat>
